--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8">
     <title>Home Page</title>
 
-    <style>
-        body {            
-            background-color: rgb(131, 185, 222);
-            color: rgba(0, 0, 0, 1);
-        }
-        p {
-            text-align: justify;
-            text-indent: 50px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
 </head>
 
 <body>
@@ -45,7 +36,7 @@
         <h2> O que é</h2>
         <p> O <span style="font-weight:900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
         
-        <figure>
+        <figure class="sub-image">
             <img src="images/glass-quadro-homem-mulher.jpg">
             <figcaption>
                 <h3>Google Glass</h3>
