--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <img src="images/glass-oculos-preto-peq.png">
             
         <nav id="menu">
+        <nav>
             <ul>
                 <h1>Menu Principal</h1>
                 <li><a href="index.html">Home</a> </li>
