--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 <head>        
     <meta charset="UTF-8">
     <title>Home Page</title>
-
     <link rel="stylesheet" href="styles/style.css"/>
 </head>
-
 <body>
     <div id="interface">
 
-        <header id="header">
+        <header id="id-header">
         <hgroup>
-            <h1>Google Glass</h1>
-            <h2>A revolução do Google está chegando</h2>
+        <h1>Google Glass</h1>
+        <h2>A revolução do Google está chegando</h2>
         </hgroup>
             
-        <img src="images/glass-oculos-preto-peq.png">     
+        <img id="icon" src="images/glass-oculos-preto-peq.png">     
         
         <nav id="menu">
         <h1>Menu Principal</h1>
