--- a/index.html
+++ b/index.html
@@ -50,12 +50,31 @@
             <p> Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
             <h1>Especificações Técnicas </h1>
-            Tabela Técnica do Google Glass Mar/2013
-            
-            Tela:Resolução equivalente a tela de 25"
-            Camera: 5MP para fotos / 720p para vídeos
-            Conectividade: Wi-Fi/ Bluetooth
-            Memória Interna: 12GB
+            <table id="spec-table">
+                <caption>Tabela Técnica do Google Glass <span>Mar/2023</span></caption>
+                <tr>
+                    <td class="left-col">Tela</td>
+                    <td class="right-col">Resolução equivalente a tela de 25"</td>
+                </tr>
+                <tr>
+                    <td class="left-col" rowspan="2">Camera</td>
+                    <td class="right-col">5MP para fotos</td>                    
+                </tr>
+                <tr>
+                    <td class="right-col">720p para vídeos</td>
+                </tr>
+                <tr>
+                    <td class="left-col" rowspan="2">Conectividade</td>
+                    <td class="right-col">Wi-Fi</td>
+                </tr>
+                <tr>
+                    <td class="right-col">Bluetooth</td>
+                </tr>
+                <tr>
+                    <td class="left-col">Memória Interna</td>
+                    <td class="right-col">12GB</td>
+                </tr> 
+            </table>
             
             <h1> Como funciona</h1>
             <p> De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
