commit header footer specs page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="styles/style.css"/>
 </head>
-<script>
-    function changeImage(image){
-        document.getElementById('icon').src = image;
-    };
-</script>
+<script lang="javascript" src="javascript/funcoes.js"></script>
 <body>
     <div id="interface">
         <header id="id-header">
