--- a/specs.html
+++ b/specs.html
@@ -1,23 +1,47 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>        
+    <meta charset="UTF-8">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="styles/style.css"/>
+</head>
+<script lang="javascript" src="javascript/funcoes.js"></script>
+<body>
+    <div id="interface">
+        <header id="id-header">
+        <hgroup>
+        <h1>Google Glass</h1>
+        <h2>A revolução do Google está chegando</h2>
+        </hgroup>
+    
+        <img id="icon" src="images/especificacoes.png">     
+    
+        <nav id="menu">
+        <h1>Menu Principal</h1>
+        <ul type="disc">
+            <li onmouseover="changeImage('images/home.png')" onmouseout="changeImage('images/especificacoes.png')"><a href="index.html">Home</a> </li>
+            <li onmouseover="changeImage('images/especificacoes.png')" onmouseout="changeImage('images/especificacoes.png')"><a href="specs.html">Especificações</a> </li>
+            <li onmouseover="changeImage('images/fotos.png')" onmouseout="changeImage('images/especificacoes.png')"><a href="pictures.html">Fotos</a></li>
+            <li onmouseover="changeImage('images/multimidia.png')" onmouseout="changeImage('images/especificacoes.png')"><a href="media.html">Multimídia</a></li>
+            <li onmouseover="changeImage('images/contato.png')" onmouseout="changeImage('images/especificacoes.png')"><a href="contact-us.html">Fale conosco</a></li>
+        </ul>
+        </nav>
+        </header>
 
-[AQUI ENTRA UMA FOTO]
+        Glass > Especificações
+        Raio-X no Google Glass
+        por Gustavo Guanabara
+        Atualizado em 01/Maio/2013
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+        Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+        [AQUI ENTRA UMA IMAGEM]
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
-
-[AQUI ENTRA UMA IMAGEM]
-
-Copyright 2013 - by Gustavo Guanabara<
-Facebook | Twitter
+        <footer id="footer">            
+            <p>Copyright &copy; 1812 - by Jefferson Silveira <br/>
+                <a href="https://www.instagram.com/jeffsilveira01/" target="_blank">Instagram</a> | <a href="https://twitter.com/googledevs" target="_blank"> Twitter</a>
+            </p>
+        </footer>
+    </div>
+</body>
+</html>
