commit header footer page

--- a/media.html
+++ b/media.html
@@ -1,25 +1,49 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>        
+    <meta charset="UTF-8">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="styles/style.css"/>
+</head>
+<script lang="javascript" src="javascript/funcoes.js"></script>
+<body>
+    <div id="interface">
+        <header id="id-header">
+        <hgroup>
+        <h1>Google Glass</h1>
+        <h2>A revolução do Google está chegando</h2>
+        </hgroup>
+    
+        <img id="icon" src="images/multimidia.png">     
+    
+        <nav id="menu">
+        <h1>Menu Principal</h1>
+        <ul type="disc">
+            <li onmouseover="changeImage('images/home.png')" onmouseout="changeImage('images/multimidia.png')"><a href="index.html">Home</a> </li>
+            <li onmouseover="changeImage('images/especificacoes.png')" onmouseout="changeImage('images/multimidia.png')"><a href="specs.html">Especificações</a> </li>
+            <li onmouseover="changeImage('images/fotos.png')" onmouseout="changeImage('images/multimidia.png')"><a href="pictures.html">Fotos</a></li>
+            <li onmouseover="changeImage('images/multimidia.png')" onmouseout="changeImage('images/multimidia.png')"><a href="media.html">Multimídia</a></li>
+            <li onmouseover="changeImage('images/contato.png')" onmouseout="changeImage('images/multimidia.png')"><a href="contact-us.html">Fale conosco</a></li>
+        </ul>
+        </nav>
+        </header>
 
-[AQUI ENTRA UMA FOTO]
-
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
-
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+        Glass > Multimídia
+        Sons e Vídeos
+        por Gustavo Guanabara
+        Atualizado em 01/Maio/2013
 
 
-Áudio e Vídeo
+        Áudio e Vídeo
 
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
+        [AQUI ENTRA UM VÍDEO]
+        [AQUI ENTRA UM ÁUDIO]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+        <footer id="footer">            
+            <p>Copyright &copy; 1812 - by Jefferson Silveira <br/>
+                <a href="https://www.instagram.com/jeffsilveira01/" target="_blank">Instagram</a> | <a href="https://twitter.com/googledevs" target="_blank"> Twitter</a>
+            </p>
+        </footer>
+    </div>
+</body>
+</html>
