commit iframe specs page

--- a/google-glass.html
+++ b/google-glass.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <title>Informações sobre o Google Glass</title>
         <style>
-            body {
+            body::-webkit-scrollbar {       /*Esconde o scrollbar sem tirar a rolagem*/
                 font-family: Arial;
                 font-size: 10pt;
+                overflow: hidden;
             }
 
             p {
