--- a/specs.html
+++ b/specs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Home Page</title>
     <link rel="stylesheet" href="styles/style.css"/>
+    <link rel="stylesheet" href="styles/specs.css">
 </head>
 <script lang="javascript" src="javascript/funcoes.js"></script>
 <body>
@@ -28,14 +29,25 @@
         </nav>
         </header>
 
-        Glass > Especificações
-        Raio-X no Google Glass
-        por Gustavo Guanabara
-        Atualizado em 01/Maio/2013
+        <section id="content-full">
+            <article id="main-news">
+                <header id="art-header">
+                    <hgroup>
+                        <h3>Glass > Especificações</h3>
+                        <h1> Raio-X no Google Glass</h1>
+                        <h2> por Jefferson Silveira</h2>
+                        <h3 class="right">Atualizado em 13/Fevereiro/1812</h3>
+                    </hgroup>
+                </header>
+                
+                <p> Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
-        Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
-
-        [AQUI ENTRA UMA IMAGEM]
+                <section id="content">
+                    <img src="images/glass-esquema-marcado.jpg" alt="">
+                    <iframe src="google-glass.html" name="window" id="frame-spec"></iframe>
+                </section>
+            </article>
+        </section>
 
         <footer id="footer">            
             <p>Copyright &copy; 1812 - by Jefferson Silveira <br/>
