commit usemap specs page

--- a/specs.html
+++ b/specs.html
@@ -43,7 +43,10 @@
                 <p> Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
                 <section id="content">
-                    <img src="images/glass-esquema-marcado.jpg" alt="">
+                    <img src="images/glass-esquema-marcado.jpg" alt="" usemap="#mymap">
+                    <map name="mymap">
+                        <area shape="rect" coords="183,205,268,252" href="google-glass.html#screen" target="window">
+                    </map>
                     <iframe src="google-glass.html" name="window" id="frame-spec"></iframe>
                 </section>
             </article>
