commit usemap specs page

--- a/specs.html
+++ b/specs.html
@@ -46,6 +46,9 @@
                     <img src="images/glass-esquema-marcado.jpg" alt="" usemap="#mymap">
                     <map name="mymap">
                         <area shape="rect" coords="183,205,268,252" href="google-glass.html#screen" target="window">
+                        <area shape="circle" coords="158,243,12" href="google-glass.html#cam" target="window">
+                        <area shape="circle" coords="76,51,11" href="google-glass.html#gadgets" target="window">
+                        <area shape="poly" coords="27,142,83,216,83,253,27,170" href="google-glass.html#sensors" target="window">
                     </map>
                     <iframe src="google-glass.html" name="window" id="frame-spec"></iframe>
                 </section>
