--- a/pictures.html
+++ b/pictures.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Home Page</title>
     <link rel="stylesheet" href="styles/style.css"/>
+    <link rel="stylesheet" href="styles/picture.css">
 </head>
 <script lang="javascript" src="javascript/funcoes.js"></script>
 <body>
@@ -28,19 +29,30 @@
         </nav>
         </header>
 
-        Glass > Fotos
-        Galeria de Imagens do Google Glass
-        por Gustavo Guanabara
-        Atualizado em 01/Maio/2013
+        <section id="content-full">
+            <article id="main-news">
+                <header id="art-header">
+                    <hgroup>
+                        <h3>Glass > Fotos </h3>
+                        <h1>Galeria de Imagens do Google Glass </h1>
+                        <h2>por Jefferson Silveira </h2>
+                        <h3 class="right">Atualizado em 17/Fevereiro/1812 </h3>
+                    </hgroup>
+                </header>
 
-        Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+                <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
+        
+                <ul id="photo-album">
+                    <li id="pic-01"><spam>Agenda e lembretes </spam></li>
+                    <li id="pic-02"><spam>Sergey Brin usando o Glass </spam></li>
+                    <li id="pic-03"><spam>Leve e compacto </spam></li>
+                    <li id="pic-04"><spam>Sensação de uma tela de 50" </spam></li>
+                    <li id="pic-05"><spam>Vários tipos de lente </spam></li>
+                    <li id="pic-06"><spam>Informações importantes </spam></li>
+                </ul>
+            </article>
+        </section>
 
-        - Agenda e lembretes
-        - Sergey Brin usando o Glass
-        - Leve e compacto
-        - Sensação de uma tela de 50"
-        - Vários tipos de lente
-        - Informações importantes
 
         <footer id="footer">            
             <p>Copyright &copy; 1812 - by Jefferson Silveira <br/>
