--- a/pictures.html
+++ b/pictures.html
@@ -43,12 +43,12 @@
                 <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
         
                 <ul id="photo-album">
-                    <li id="pic-01"><spam>Agenda e lembretes </spam></li>
-                    <li id="pic-02"><spam>Sergey Brin usando o Glass </spam></li>
-                    <li id="pic-03"><spam>Leve e compacto </spam></li>
-                    <li id="pic-04"><spam>Sensação de uma tela de 50" </spam></li>
-                    <li id="pic-05"><spam>Vários tipos de lente </spam></li>
-                    <li id="pic-06"><spam>Informações importantes </spam></li>
+                    <li id="pic-01"><span>Agenda e lembretes </span></li>
+                    <li id="pic-02"><span>Sergey Brin usando o Glass </span></li>
+                    <li id="pic-03"><span>Leve e compacto </span></li>
+                    <li id="pic-04"><span>Sensação de uma tela de 50" </span></li>
+                    <li id="pic-05"><span>Vários tipos de lente </span></li>
+                    <li id="pic-06"><span>Informações importantes </span></li>
                 </ul>
             </article>
         </section>
