--- a/contact-us.html
+++ b/contact-us.html
@@ -40,14 +40,18 @@
                     </hgroup>
                 </header>
 
-                <form action="">
+                <form method="post" id="fContact" action="mailto:contato@exemplo.com">
                     <fieldset id="data-user">
                         <legend>Identificação do Usuário </legend>
-                            <p><label for="cName"> Nome: </label><input type="text" name="tName" id="cName" size="20" maxlength="30" placeholder="Nome completo"> </p>
-
-                            <p>Senha: <input type="password" name="tPassword" id="cPassword" size="8" maxlength="8" placeholder="Oito dígitos"></p>
-
-                            <p>E-mail: <input type="email" name="tMail" id="cMail" size="20" maxlength="40"> </p>
+                            <p><label for="cName"> Nome: </label>
+                                <input type="text" name="tName" id="cName" size="20" maxlength="30" placeholder="Nome completo"> 
+                            </p>
+                            <p><label for="cPassword">Senha: </label> 
+                                <input type="password" name="tPassword" id="cPassword" size="8" maxlength="8" placeholder="8 dígitos">
+                            </p>
+                            <p><label for="cMail">E-mail: </label>
+                                <input type="email" name="tMail" id="cMail" size="20" maxlength="40" placeholder="exemplo@email.com">
+                            </p>
 
                             <fieldset id="gender"> <legend>Sexo: </legend>
                                 <input type="radio" name="tGender" id="cFemale"> <label for="cFemale">Feminino</label> <br/>
@@ -55,15 +59,46 @@
                                 <input type="radio" name="tGender" id="cOther"> <label for="cOther">Outro</label> <br/>
                             </fieldset>
 
-                            <p>Data de Nascimento: <input type="date" name="tDate" id="cDate"> </p>
+                            <p><label for="cDate">Data de Nascimento: </label>
+                                <input type="date" name="tDate" id="cDate">
+                            </p>
                     </fieldset>
             
                     <fieldset id="address">
                         <legend>Endereço do Usuário </legend>
-                            <p>Logradouro: <input type="text" name="tStreet" id="cStreet" size="13" maxlength="50" placeholder="Rua, Av, Trav, etc."> </p>
-                            <p>Número: <input type="number" name="tNum" id="cNum" min="0" max="999999"> </p>
-                            <p>Estado: </p>
-                            <p>Cidade: </p>
+                            <p><label for="cStreet">Logradouro: </label>
+                                <input type="text" name="tStreet" id="cStreet" size="13" maxlength="50" placeholder="Rua, Av, Trav, etc.">
+                            </p>
+                            <p><label for="cNum">Número: </label>
+                                <input type="number" name="tNum" id="cNum" min="0" max="999999">
+                            </p>
+                            <p><label for="cState">Estado: </label>
+                                <select name="tState" id="cState">
+                                    <optgroup label="Região Norte">
+                                        <option value="AM">Amazonas</option>
+                                    </optgroup>
+                                    <optgroup label="Região Nordeste">
+                                        <option value="BA">Bahia</option>
+                                        <option value="CE">Ceará</option>
+                                    </optgroup>
+                                    <optgroup label="Região Sudeste">
+                                        <option value="SP">São Paulo</option>
+                                    </optgroup>
+                                    <optgroup label="Região Sul">
+                                        <option value="RS">Rio Grande do Sul</option>
+                                        <option value="" selected></option>
+                                    </optgroup>
+                                </select>
+                            </p>
+                            <p><label for="cCity">Cidade: </label>
+                                <input type="text" name="tCity" id="cCity" maxlength="40" size="20" placeholder="Sua cidade" list="cities">
+                                <datalist id="cities">
+                                    <option value="Porto Alegre"></option>
+                                    <option value="Viamão"></option>
+                                    <option value="Pelotas"></option>
+                                    <option value="Santa Maria"></option>
+                                </datalist>
+                            </p>
                     </fieldset>
 
                     <fieldset id="message">
