commit css form page

--- a/contact-us.html
+++ b/contact-us.html
@@ -141,7 +141,7 @@
                     </fieldset>
             
                     <!-- <input type="submit" value="Enviar"> -->
-                    <input type="image" name="tEnviar" src="images/botao-enviar.png">
+                    <input id="button" type="image" name="tEnviar" src="images/botao-enviar.png">
 
                 </form>
                 
